--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">SZTE AR</string>
+    <string name="hello_world">Hello World</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_preliminary_informations">PreliminaryInformationsActivity</string>
+    <string name="app_name">SZTE AR</string>
+    <string name="action_info">Application information</string>
+    <string name="title_activity_preliminary_informations">Application summary</string>
+    <string name="action_contact">Contact</string>
 </resources>
