--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,12 @@
     <string name="hello_world">Hello World</string>
 
     <string name="app_name">SZTE AR</string>
-    <string name="action_info">Application information</string>
+    <string name="action_info">Application informations</string>
     <string name="title_activity_preliminary_informations">Application summary</string>
     <string name="action_contact">Contact</string>
+    <string name="title_activity_dialog_info">Program informations</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_dialog_contact">Contact me</string>
+    <string name="email_address_to_contact">gaborboros90@gmail.com</string>
+    <string name="about_application">https://github.com/gaborboros90/SZTEArSamples</string>
 </resources>
